advance changes