@@ -1,9 +1,6 @@
 package com.ntc.backend.security;
 
-import com.ntc.backend.security.CustomUserDetailsService;
-import com.ntc.backend.security.JwtAuthenticationFilter;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -18,7 +15,6 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.util.Arrays;
 import java.util.List;
@@ -27,135 +23,50 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
 
-    @Autowired
-    private JwtAuthenticationFilter jwtFilter;
-
-    @Autowired
-    private CustomUserDetailsService userDetailsService;
+    @Autowired private JwtAuthenticationFilter jwtFilter;
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+    public PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
 
     @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration cfg) throws Exception {
+        return cfg.getAuthenticationManager();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-
-        configuration.setAllowedOrigins(
-                List.of("http://localhost:5173", "http://localhost")
-        );
-
-        configuration.setAllowedMethods(
-                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")
-        );
-
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-
-        source.registerCorsConfiguration("/**", configuration);
-
-        return source;
+        CorsConfiguration c = new CorsConfiguration();
+        c.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost"));
+        c.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        c.setAllowedHeaders(List.of("*"));
+        c.setAllowCredentials(true);
+        UrlBasedCorsConfigurationSource src = new UrlBasedCorsConfigurationSource();
+        src.registerCorsConfiguration("/**", c);
+        return src;
     }
-
-    // ---------- NEW: no-cache filter ----------
-    @Bean
-    public FilterRegistrationBean<OncePerRequestFilter> noCacheFilter() {
-
-        OncePerRequestFilter filter = new OncePerRequestFilter() {
-
-            @Override
-            protected void doFilterInternal(
-                    jakarta.servlet.http.HttpServletRequest req,
-                    jakarta.servlet.http.HttpServletResponse res,
-                    jakarta.servlet.FilterChain chain)
-                    throws jakarta.servlet.ServletException, java.io.IOException {
-
-                res.setHeader(
-                        "Cache-Control",
-                        "no-store, no-cache, must-revalidate, max-age=0"
-                );
-
-                res.setHeader("Pragma", "no-cache");
-                res.setHeader("Expires", "0");
-
-                chain.doFilter(req, res);
-            }
-        };
-
-        FilterRegistrationBean<OncePerRequestFilter> bean =
-                new FilterRegistrationBean<>(filter);
-
-        bean.addUrlPatterns("/api/*");
-
-        return bean;
-    }
-    // -----------------------------------------
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-
         http
-                .cors(cors ->
-                        cors.configurationSource(corsConfigurationSource())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(csrf -> csrf.disable())
+                .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(
+                                "/api/health",
+                                "/api/auth/login",
+                                "/api/password-reset",
+                                "/api/staff/reset-password"
+                        ).permitAll()
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/api/office-incharge/**").hasRole("OFFICE_INCHARGE")
+                        .requestMatchers("/api/section-head/**").hasRole("SECTION_HEAD")
+                        .requestMatchers("/api/staff/**").hasAnyRole("STAFF", "SECTION_HEAD", "OFFICE_INCHARGE")
+                        .requestMatchers("/api/notices/**", "/api/reports/**", "/api/profile/**", "/api/leave/**")
+                        .hasAnyRole("STAFF", "SECTION_HEAD", "OFFICE_INCHARGE", "ADMIN")
+                        .anyRequest().authenticated()
                 )
-
-                .csrf(csrf ->
-                        csrf.disable()
-                )
-
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(
-                                SessionCreationPolicy.STATELESS
-                        )
-                )
-
-                .authorizeHttpRequests(auth ->
-                        auth
-                                .requestMatchers(
-                                        "/api/health",
-                                        "/api/login",
-                                        "/api/admin/login",
-                                        "/api/staff/reset-password",
-                                        "/api/password-reset"
-                                )
-                                .permitAll()
-
-                                .requestMatchers("/api/admin/**")
-                                .hasRole("ADMIN")
-
-                                .requestMatchers("/api/staff/**")
-                                .hasAnyRole(
-                                        "STAFF",
-                                        "SECTION_HEAD",
-                                        "DEPARTMENT_HEAD"
-                                )
-
-                                .requestMatchers("/api/section-head/**")
-                                .hasRole("SECTION_HEAD")
-
-                                .requestMatchers("/api/department-head/**")
-                                .hasRole("DEPARTMENT_HEAD")
-
-                                .anyRequest()
-                                .authenticated()
-                )
-
-                .addFilterBefore(
-                        jwtFilter,
-                        UsernamePasswordAuthenticationFilter.class
-                );
-
+                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 }
-
